# aftermath-engine-vk

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.zig  build.zig.zon  mise.toml  vcpkg.json
src/: CMakeLists.txt  main.cpp  main.old
src/buffers/: octree.cpp  octree.hpp
src/camera/: README.md  camera.cpp  camera.hpp
src/screen/: README.md  computescreen.cpp  computescreen.hpp
src/shaders/: compile.bat  light.slang  octree.slang  raymarch.slang  sdf.slang  shader.slang  tree.slang
src/tree/: README.md  buffer.cpp  buffer.hpp  tree.cpp  tree.hpp  tree_stale.cpp  tree_test.cpp  tree_util.cpp
src/uniforms/: frame.cpp  frame.hpp  render.hpp
src/util/: README.md  channel.hpp  waitgroup.hpp
src/vulkan/: context.cpp  context.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  sync.cpp  sync.hpp
